# jolt

./: .dockerignore  .gitignore  AKITA_INTEGRATION.md  Cargo.toml  HACHI_INTEGRATION.md  README.md  build.rs  dump_target.rs  format-spec-target.mjs  riscv64gc-unknown-linux-gnu.json  riscv64gc-unknown-linux-musl.json  riscv64ima-jolt-zkvm-elf.json  riscv64imac-jolt-linux-elf.json  riscv64imac-jolt-linux-musl.json  riscv64imac-jolt-none-elf.json  riscv64imac-unknown-linux-elf.json  riscv64imac-unknown-none-elf.json
.config/: nextest.toml
.github/workflows/: rust.yml
assembly_generator/: Cargo.toml  Readme.md  build_and_analyze.sh
assembly_generator/assembly_results/: mem_ctr_default_sha2_rv32.asm  mem_ctr_default_sha2_rv64.asm  mem_ctr_default_sha3_rv32.asm  mem_ctr_default_sha3_rv64.asm  mem_ctr_inline_sha2_rv32.asm
assembly_generator/src/: trace_analyzer.rs
common/: Cargo.toml
common/src/: constants.rs
crates/jolt-backends/src/: lib.rs  traits.rs
crates/jolt-compute/src/: traits.rs
crates/jolt-cpu/: Cargo.toml
crates/jolt-cpu/benches/: kernel_ir_vs_stack_vm.rs
crates/jolt-cpu/src/: backend.rs  kernel_ir_interp.rs  lib.rs
crates/jolt-cpu/tests/: kernel_ir_parity.rs
crates/jolt-ir/src/: kernel_ir.rs  lib.rs  lower.rs
crates/jolt-metal/benches/: metal_vs_cpu.rs
crates/jolt-metal/src/: compiler.rs
crates/jolt-metal/tests/: backend_parity.rs
crates/jolt-openings/: Cargo.toml
crates/jolt-openings/src/: reduction.rs
crates/jolt-prover/src/: api.rs
crates/jolt-riscv/: Cargo.toml
crates/jolt-spartan/: Cargo.toml
crates/jolt-spartan/src/: uniform_key.rs  uniform_verifier.rs
crates/jolt-sumcheck/: Cargo.toml
crates/jolt-sumcheck/src/: batched.rs  verifier.rs
crates/jolt-verifier/: Cargo.toml
crates/jolt-verifier-backend/: Cargo.toml
crates/jolt-verifier-backend/docs/: ast-pipeline.dot  ast-pipeline.mmd  ast-toy.dot  ast-toy.mmd
crates/jolt-verifier-backend/examples/: dump_ast.rs
crates/jolt-verifier-backend/src/: expr_eval.rs  helpers.rs  lib.rs  tracing.rs
crates/jolt-verifier/src/: lib.rs  verifier.rs
crates/jolt-verifier/tests/: pipeline.rs
crates/jolt-zkvm/tests/: regrouping.rs
custom-libc/: build.sh  jolt_libc.c  unwind_stubs.rs
custom-libc/include/: time.h
custom-libc/include/sys/: ioctl.h
examples/binius-verifier/: Cargo.toml  README.md
examples/binius-verifier/guest/: Cargo.toml  build.rs
examples/binius-verifier/guest/src/: lib.rs  main.rs  provable_macro.rs
examples/binius-verifier/src/: main.rs
examples/blake2-inline/src/: lib.rs
examples/ec-bench/: Cargo.toml
examples/ec-bench/guest/: Cargo.toml
examples/ec-bench/src/: main.rs
examples/fibonacci/src/: main.rs
examples/hash-bench/: Cargo.toml  README.md
examples/hash-bench/guest/: Cargo.toml
examples/hash-bench/src/: main.rs
examples/msm/guest/: Cargo.toml
examples/pairing-msm/: Cargo.toml
examples/pairing-msm/guest/: Cargo.toml
examples/pairing-msm/src/: main.rs
examples/recursion/: Cargo.toml  README.md
examples/recursion/guest/src/: lib.rs
examples/recursion/src/: main.rs
examples/secp256k1-ecdsa-verify/guest/: Cargo.toml
examples/sha2-chain-default/: Cargo.toml
examples/sha2-chain-default/guest/: Cargo.toml
examples/sha2-chain-default/src/: main.rs
examples/sha2-chain/src/: main.rs
examples/sha2-ex/: Cargo.toml  build_sha2_variants.sh
examples/sha2-ex/guest/: Cargo.toml
examples/sha2-ex/guest/src/: lib.rs
examples/sha3-chain-default/: Cargo.toml
examples/sha3-chain-default/guest/: Cargo.toml
examples/sha3-chain-default/src/: main.rs
examples/stateless-evm/: PERF_NOTES.md  README.md
examples/stateless-evm/fixtures/: empty_block_osaka_1M.json  ether_transfers_osaka_1M.json
examples/stateless-evm/guest/: Cargo.toml
examples/stateless-evm/guest/src/: lib.rs  main.rs
examples/stateless-evm/host/: Cargo.toml
examples/stateless-evm/host/src/: main.rs
examples/stateless-evm/memops/: Cargo.toml
inline_benchmark/: Readme.md
inline_benchmark/src/: main.rs
inline_trace_benchmark/src/: main.rs
jolt-core/: Cargo.toml
jolt-core/benches/: binding.rs  commit.rs  e2e_profiling.rs  msm_adapter_batch.rs  msm_batch.rs  spartan_outer.rs
jolt-core/src/: curve.rs  lib.rs
jolt-core/src/benches/: bench.rs
jolt-core/src/field/: ark.rs  folded_accum.rs  fp128.rs  mod.rs
jolt-core/src/guest/: mod.rs  program.rs  prover.rs  verifier.rs
jolt-core/src/host/: mod.rs  program.rs
jolt-core/src/lasso/: memory_checking.rs  surge.rs
jolt-core/src/msm/: mod.rs
jolt-core/src/poly/: coefficient_layout.rs  compact_polynomial.rs  dense_interleaved_poly.rs  dense_mlpoly.rs  eq_poly.rs  identity_poly.rs  lt_poly.rs  matrix_layout.rs  mod.rs  multilinear_polynomial.rs  one_hot_polynomial.rs  ra_poly.rs  (+8 more)
jolt-eval/: Cargo.toml
jolt-inlines/field-arith/: Cargo.toml
jolt-inlines/field-arith/src/: lib.rs
jolt-inlines/grumpkin/: Cargo.toml
jolt-inlines/grumpkin/src/: backend_arkworks.rs  backend_mont.rs  constants.rs  lib.rs  sdk.rs  tests.rs
jolt-inlines/secp256k1/: Cargo.toml
jolt-inlines/secp256k1/src/: backend_arkworks.rs  backend_mont.rs  constants.rs  lib.rs  sdk.rs  tests.rs
jolt-inlines/sha2/: C_FFI_GUIDE.md  Cargo.toml
jolt-platform/src/: alloc.rs
jolt-sdk/: Cargo.toml
jolt-sdk/src/: blake2.rs  host_utils.rs  lib.rs
jolt-sdk/tests/: verifier_api.rs
paper_artifacts_scripts/: Dockerfile  README.md  docker.ps1  docker.sh  reproduce_paper_experiments.sh  run.sh  setup_ubuntu.sh
proof_trace_generator/: Cargo.toml
proof_trace_generator/src/: main.rs
scripts/: count_riscv_instructions.sh  sha2_4000_dory.sh  table_v_bench.sh  table_v_full.sh
scripts/benchmark/: jolt_runner.sh  pin_numa.sh  run_benchmarks.sh  tune_linux.sh
specs/: 1344-committed-bytecode-program-image.md  akita-fused-increment-piop.md  commitment-layout-abstraction.md  generic-pcs-in-zkvm.md  lattice-jolt-akita-integration.md  precommitted-polynomials.md
specs/akita/: committed-bytecode-policy.md
src/: build_wasm.rs
tracer/: Cargo.toml
tracer/src/: lib.rs
transpiler/src/: main.rs  symbolic_proof.rs
(+246 files in other folders)
