[package]
name = "inline_trace_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.0.8", default-features = false, features = [
    "use-std",
] }

tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
tracer = { path = "../tracer" }
jolt-core = { path = "../jolt-core" }

ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0" }
rand_core = { version = "0.6.4", default-features = false }
ark-bn254 = "0.5.0"
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"