[package]
name = "jolt-verifier-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Backend trait for Jolt verifier scalar arithmetic — Native (zero-overhead), Tracing (AST), R1CS"

[lints]
workspace = true

[dependencies]
jolt-field = { path = "../jolt-field", default-features = false }
jolt-ir = { path = "../jolt-ir" }
thiserror = { workspace = true }

[dev-dependencies]
jolt-field = { path = "../jolt-field", features = ["bn254"] }
jolt-poly = { path = "../jolt-poly" }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
