[package]
name = "recursion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recursion"
path = "src/main.rs"

[dependencies]
jolt-sdk = { workspace = true, features = ["host"] }
tracing-subscriber.workspace = true
tracing.workspace = true
ark-serialize.workspace = true
postcard.workspace = true
clap.workspace = true
jolt-inlines-sha2 = { workspace = true, features = ["host"] }

[package.metadata.cargo-machete]
ignored = ["jolt-inlines-sha2"]
