[package]
name = "jolt-inlines-field-arith"
version = "0.1.0"
edition = "2021"
description = "no_std 256-bit field arithmetic primitives for Jolt inlines"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"

[features]
default = []

[dependencies]
# no dependencies; pure no_std + core

