[package]
name = "stateless-evm-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []
software-keccak = []

[dependencies]
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk", features = [
  "guest-std",
] }
jolt-inlines-keccak256.workspace = true
jolt-inlines-p256.workspace = true
jolt-inlines-secp256k1.workspace = true
jolt-inlines-sha2.workspace = true
postcard.workspace = true
revm-precompile = { version = "32.1.0", default-features = false }
serde.workspace = true
alloy-consensus = { version = "1.6.3", default-features = false, features = [
  "crypto-backend",
] }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
  "native-keccak",
] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0", default-features = false }
stateless = { git = "https://github.com/paradigmxyz/stateless", rev = "ed189a51931e8589102f3139d48fdbb3bbe4c1f7", default-features = false }
tries = { git = "https://github.com/paradigmxyz/stateless", rev = "ed189a51931e8589102f3139d48fdbb3bbe4c1f7", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
critical-section = "1"
